--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row portfolio-grid">
+                 <div class="row portfolio-grid">
                      <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-1">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
@@ -347,7 +347,7 @@
                                 </a>
                             </div>
                             <div class="text">
-                                <h3 class="title"><a href="Event - CGT 5.0.html">Chennai's Got Talent 5.0</a></h3>
+                                <h3 class="title"><a href="Event - CGT 5.0.html">CGT 5.0</a></h3>
                                 <a class="cat-link">18/08/2024</a>
                             </div>
                         </div>
@@ -379,14 +379,27 @@
                                 </a>
                             </div>
                             <div class="text">
-                                <h3 class="title"><a href="Event - CGT REC.html">CGT @ REC</a></h3>
+                                <h3 class="title"><a href="Event - CGT REC.html">CGT 5.0 REC</a></h3>
                                 <a class="cat-link">25/07/2024</a>
                             </div>
                         </div>
                     </div>
-                    <div>
-             
-                <div class="row portfolio-grid"> -->
+                    <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-7">
+                        <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".50s">
+                            <div class="img-holder">
+                                <img src="assets/images/portfolio/yuva olympics.png" alt="Img">
+                                <a href="Event - Yuva Olympics.html" class="portfolio-hover">
+                                    <div class="hover-content">
+                                        <i class="far fa-external-link"></i>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text">
+                                <h3 class="title"><a href="Event - Yuva Olympics.html">Yuva Olympics</a></h3>
+                                <a class="cat-link">07/07/2024</a>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-1">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
@@ -418,7 +431,7 @@
                                 <a class="cat-link">05/05/2024</a>
                             </div>
                         </div>
-                    <div>
+                    </div>
                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-7">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
@@ -1142,7 +1155,7 @@
                         </div>
                     </div>
                 </div>
-                 <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-2">
+               <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-2">
                     <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                         <div class="img-holder">
                             <img src="assets/images/portfolio/voicingthewhispers.jpg" alt="Img">
