--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                     </div>
                 </div>
                  <div class="row portfolio-grid">
-                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-1">
+                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-1 cat-6">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
                                 <img src="assets/images/portfolio/Eco arcade.png" alt="Img">
