--- a/podcast.html
+++ b/podcast.html
@@ -131,7 +131,12 @@
         </section>
         <!--====== End Page-banner section ======-->
         <!--====== Start Portfolio Section ======-->
-        <section class="portfolio-area portfolio-area-v1 light-gray-bg pt-130 pb-70" id="initiatives">
+        <section class="counter-area counter-area-v1 pb-10">
+            <div class="section-title text-center mt-30 mb-10 wow fadeInUp">
+                <span class="sub-title st-one">Season-02</span>
+            </div>
+        </section>
+        <section class="portfolio-area portfolio-area-v1 light-gray-bg pt-10 pb-70" id="initiatives">
             <div class="container">   
                 <div class="row portfolio-grid">
                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-5 cat-11">
@@ -347,10 +352,12 @@
                         </div>
                     </div> 
                 </div>
-            </div>    
-            <hr>
-            <center><h4>Season-01</h4></center>
-            <hr>
+            </div>
+            <section class="counter-area counter-area-v1 pb-10">
+                <div class="section-title text-center mt-30 mb-10 wow fadeInUp">
+                    <span class="sub-title st-one">Season-01</span>
+                </div>
+            </section>  
             <div class="container">   
                 <div class="row portfolio-grid">
                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-5 cat-11">
