--- a/podcast.html
+++ b/podcast.html
@@ -143,7 +143,7 @@
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
                                 <img src="assets/images/podcast/S-02 Ep-10.png" alt="Img">
-                                <a href="https://open.spotify.com/episode/5lD81i1wNGzoipqOlJmACI?si=5tORcV6XQlGMS7xCFjFtwQ&utm_source=copy-link" class="portfolio-hover">
+                                <a href="https://www.youtube.com/watch?v=ak8NqK4XCrI&t=5s" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
                                     </div>
@@ -151,7 +151,7 @@
                                 </div>
             
                             <div style="text-align: center;" class="text">
-                                <h3 class="title"><a href="https://open.spotify.com/episode/5lD81i1wNGzoipqOlJmACI?si=5tORcV6XQlGMS7xCFjFtwQ&utm_source=copy-link">Smiles That Change Lives</a></h3>
+                                <h3 class="title"><a href="https://www.youtube.com/watch?v=ak8NqK4XCrI&t=5s">Smiles That Change Lives</a></h3>
                                 <p>Ever wondered what it takes to drive real change in the world?</p>
                             </div>
                         </div>
@@ -160,14 +160,14 @@
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".3s">
                             <div class="img-holder">
                                 <img src="assets/images/podcast/S-02 Ep-09.png" alt="Img">
-                                <a href="https://open.spotify.com/episode/2VCMt8jUNU1aKOcHJvXdhe?si=Tn8dxG8-RkK5gy3HIPDKDg&utm_source=copy-link" class="portfolio-hover">
+                                <a href="https://www.youtube.com/watch?v=s6_QHOAWrPA" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
                                     </div>
                                 </a>
                             </div>
                             <div  style="text-align: center;" class="text">
-                                <h3 class="title"><a href="https://open.spotify.com/episode/2VCMt8jUNU1aKOcHJvXdhe?si=Tn8dxG8-RkK5gy3HIPDKDg&utm_source=copy-link">A Dialogue With Yuva</a></h3>
+                                <h3 class="title"><a href="https://www.youtube.com/watch?v=s6_QHOAWrPA">A Dialogue With Yuva</a></h3>
                                 <p>Join us for a mind-opening discussion!</p>
                             </div>
                         </div>
@@ -176,7 +176,7 @@
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
                                 <img src="assets\images/podcast/S-02 Ep-08.png" alt="Img">
-                                <a href="https://open.spotify.com/episode/4K2LW0tke58hN8GICc56Tu?si=ewfMi8xUTbSN8eq0viQHZg&utm_source=copy-link" class="portfolio-hover">
+                                <a href="https://www.youtube.com/watch?v=8rZQ4xux8tQ" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
                                     </div>
@@ -184,7 +184,7 @@
                                 </div>
             
                             <div style="text-align: center;" class="text">
-                                <h3 class="title"><a href="https://open.spotify.com/episode/4K2LW0tke58hN8GICc56Tu?si=ewfMi8xUTbSN8eq0viQHZg&utm_source=copy-link">The Journey Within</a></h3>
+                                <h3 class="title"><a href="https://www.youtube.com/watch?v=8rZQ4xux8tQ">The Journey Within</a></h3>
                                 <p>Tune in as we master balance in the academic hustle for a better you!</p>
                             </div>
                         </div>
@@ -193,14 +193,14 @@
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
                                 <img src="assets\images/podcast/S-02 Ep-07.png" alt="Img">
-                                <a href="https://open.spotify.com/episode/5PRr72laqFJepR9K1YBDB2?si=44swie-PTLm_iLnSwlBZww&utm_source=copy-link" class="portfolio-hover">
+                                <a href="https://www.youtube.com/watch?v=A9BqB7YCXEg" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
                                     </div>
                                 </a>
                             </div>
                             <div  style="text-align: center;" class="text">
-                                <h3 class="title"><a href="https://open.spotify.com/episode/5PRr72laqFJepR9K1YBDB2?si=44swie-PTLm_iLnSwlBZww&utm_source=copy-link">Ignite Your Passion</a></h3>
+                                <h3 class="title"><a href="https://www.youtube.com/watch?v=A9BqB7YCXEg">Ignite Your Passion</a></h3>
                                 <p>Fresh insights!</p>
                             </div>
                         </div>
@@ -209,14 +209,14 @@
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".3s">
                             <div class="img-holder">
                                 <img src="assets\images/podcast/S-02 Ep-06.png" alt="Img">
-                                <a href="https://open.spotify.com/episode/0MFaznbvnHJGZt8emCHGbx?si=ZF-Tnm5YR120CIorWq4gWg&utm_source=copy-link" class="portfolio-hover">
+                                <a href="https://www.youtube.com/watch?v=KY8yTBm4kSo" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
                                     </div>
                                 </a>
                             </div>
                             <div  style="text-align: center;" class="text">
-                                <h3 class="title"><a href="https://open.spotify.com/episode/0MFaznbvnHJGZt8emCHGbx?si=ZF-Tnm5YR120CIorWq4gWg&utm_source=copy-link">Mastering The Quests</a></h3>
+                                <h3 class="title"><a href="https://www.youtube.com/watch?v=KY8yTBm4kSo">Mastering The Quests</a></h3>
                                 <p>Dreaming of postgrad abroad?</p>
                             </div>
                         </div>
@@ -243,14 +243,14 @@
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
                                 <img src="assets\images/podcast/S-02 Ep-05.png" alt="Img">
-                                <a href="https://open.spotify.com/episode/2OhCzXbSjMCfSb6cFAtKMR?si=_Pnl4peuRwCSuTEwsC_fHg&utm_source=copy-link" class="portfolio-hover">
+                                <a href="https://www.youtube.com/watch?v=QXU0VLUvmH8" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
                                     </div>
                                 </a>
                             </div>
                             <div  style="text-align: center;" class="text">
-                                <h3 class="title"><a href="https://open.spotify.com/episode/2OhCzXbSjMCfSb6cFAtKMR?si=_Pnl4peuRwCSuTEwsC_fHg&utm_source=copy-link">Roots Of Patience</a></h3>
+                                <h3 class="title"><a href="https://www.youtube.com/watch?v=QXU0VLUvmH8">Roots Of Patience</a></h3>
                                 <p>Growth, resilience, and perseverance mirrored!</p>
                             </div>
                         </div>
@@ -259,14 +259,14 @@
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".3s">
                             <div class="img-holder">
                                 <img src="assets\images/podcast/S-02 Ep-04.png" alt="Img">
-                                <a href="https://open.spotify.com/episode/5boh0xg8HStUEBzMbMdL66?si=DUuxa51iRoe1O0ugqkMaXw&utm_source=copy-link" class="portfolio-hover">
+                                <a href="https://www.youtube.com/watch?v=QXU0VLUvmH8" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
                                     </div>
                                 </a>
                             </div>
                             <div  style="text-align: center;" class="text">
-                                <h3 class="title"><a href="https://open.spotify.com/episode/5boh0xg8HStUEBzMbMdL66?si=DUuxa51iRoe1O0ugqkMaXw&utm_source=copy-link">Chinna Chinna Aasai</a></h3>
+                                <h3 class="title"><a href="https://www.youtube.com/watch?v=QXU0VLUvmH8">Chinna Chinna Aasai</a></h3>
                                 <p>Gratitude through stories and tips!</p>
                             </div>
                         </div>
@@ -275,14 +275,14 @@
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".4s">
                             <div class="img-holder">
                                 <img src="assets\images/podcast/S-02 Ep-03.png" alt="Img">
-                                <a href="https://open.spotify.com/episode/2Wckp7zsAtkvjnatZs9qEI?si=n9luwD98Qx6yigpXtbE9Og&utm_source=copy-link" class="portfolio-hover">
+                                <a href="https://www.youtube.com/watch?v=0rrzO3K67as" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
                                     </div>
                                 </a>
                             </div>
                             <div  style="text-align: center;" class="text">
-                                <h3 class="title"><a href="https://open.spotify.com/episode/2Wckp7zsAtkvjnatZs9qEI?si=n9luwD98Qx6yigpXtbE9Og&utm_source=copy-link">From Teens To Twenties</a></h3>
+                                <h3 class="title"><a href="https://www.youtube.com/watch?v=0rrzO3K67as">From Teens To Twenties</a></h3>
                                 <p>Growth and self-discovery in twenties</p>
                             </div>
                         </div>
@@ -291,14 +291,14 @@
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
                                 <img src="assets/images/podcast/S-02 Ep-02.png" alt="Img">
-                                <a href="https://open.spotify.com/episode/7d6jGQti2RCVYTfU0AI1hU?si=fjZPHfTIR9Cc2-5kgNKMuw&utm_source=copy-link" class="portfolio-hover">
+                                <a href="https://www.youtube.com/watch?v=ljIm1uX-eIs" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
                                     </div>
                                 </a>
                             </div>
                             <div  style="text-align: center;" class="text">
-                                <h3 class="title"><a href="https://open.spotify.com/episode/7d6jGQti2RCVYTfU0AI1hU?si=fjZPHfTIR9Cc2-5kgNKMuw&utm_source=copy-link">Intellect Insights</a></h3>
+                                <h3 class="title"><a href="https://www.youtube.com/watch?v=ljIm1uX-eIs">Intellect Insights</a></h3>
                                 <p>Unlock tools for success, today!</p>
                             </div>
                         </div>
@@ -323,14 +323,14 @@
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".4s">
                             <div class="img-holder">
                                 <img src="assets/images/podcast/S-02 Ep-01.png" alt="Img">
-                                <a href="https://open.spotify.com/episode/7ooxMx5jBfVdGdYiJinvzx?si=y_nl9TJrTwW8HIGCQPDl0w&utm_source=copy-link" class="portfolio-hover">
+                                <a href="https://www.youtube.com/watch?v=DOinFG_kwLY" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
                                     </div>
                                 </a>
                             </div>
                             <div  style="text-align: center;" class="text">
-                                <h3 class="title"><a href="https://open.spotify.com/episode/7ooxMx5jBfVdGdYiJinvzx?si=y_nl9TJrTwW8HIGCQPDl0w&utm_source=copy-link"></a>Beyond The Whistles</h3>
+                                <h3 class="title"><a href="https://www.youtube.com/watch?v=DOinFG_kwLY"></a>Beyond The Whistles</h3>
                                 <p>Kick off the season with IPL, the talk of the town!</p>
                             </div>
                         </div>
