--- a/index.html
+++ b/index.html
@@ -331,6 +331,22 @@
                                 </a>
                             </div>
                             <div class="text">
+                                <h3 class="title"><a href="Event - Yuvaneta'24.html">Yuvaneta'24</a></h3>
+                                <a class="cat-link">03/10/2024</a>
+                            </div>
+                        </div>
+                    </div>
+                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-1 cat-6">
+                        <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
+                            <div class="img-holder">
+                                <img src="assets/images/portfolio/yuvaneta'24 cover pic.png" alt="Img">
+                                <a href="Event - Yuvaneta'24.html" class="portfolio-hover">
+                                    <div class="hover-content">
+                                        <i class="far fa-external-link"></i>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text">
                                 <h3 class="title"><a href="Event - Eco Arcade.html">Eco Arcade</a></h3>
                                 <a class="cat-link">20/10/2024</a>
                             </div>
