--- a/index.html
+++ b/index.html
@@ -331,8 +331,8 @@
                                 </a>
                             </div>
                             <div class="text">
-                                <h3 class="title"><a href="Event - Yuvaneta'24.html">Yuvaneta'24</a></h3>
-                                <a class="cat-link">03/10/2024</a>
+                                <h3 class="title"><a href="Event - Yuvaneta'24.html">Eco Arcade</a></h3>
+                                <a class="cat-link">20/10/2024</a>
                             </div>
                         </div>
                     </div>
@@ -347,8 +347,8 @@
                                 </a>
                             </div>
                             <div class="text">
-                                <h3 class="title"><a href="Event - Eco Arcade.html">Eco Arcade</a></h3>
-                                <a class="cat-link">20/10/2024</a>
+                                <h3 class="title"><a href="Event - Eco Arcade.html">Yuvaneta'24</a></h3>
+                                <a class="cat-link">03/10/2024</a>
                             </div>
                         </div>
                     </div>
