--- a/reg.html
+++ b/reg.html
@@ -129,7 +129,7 @@
             </div>
         </section>
         <!--====== End Page-banner section ======-->
-        <section class="team-area team-area-v3 light-gray-bg pt-30 pb-30 position-relative z-1">
+       <!-- <section class="team-area team-area-v3 light-gray-bg pt-30 pb-30 position-relative z-1">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8">
@@ -143,7 +143,7 @@
                     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSem9qWNLHoNxSqUpyojjS8jQ8ObrawStfZ2_HTmC_Ag7O9_KA/viewform?embedded=true" width="100%" height="720px" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
                 </div> 
                 </div>   
-        </section>
+        </section>-->
         <!--====== Start Team Section ======-->
         <!--<section class="cta-area cta-area-v1 pt-60">
             <div class="container-1450" id="register">
@@ -167,6 +167,19 @@
                 </div>
             </div>
         </section>-->
+        <section class="team-area team-area-v3 light-gray-bg pt-30 pb-30 position-relative z-1">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-lg-8">
+                        <div class="section-title text-center mb-55 wow fadeInUp" id="register">
+                            <h3>Membership drive</h3> 
+                            <h1>Coming soon.......</h1>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+                        
         <section class="team-area team-area-v3 light-gray-bg pt-30 pb-30 position-relative z-1">
             <div class="shape shape-one scene"><span data-depth="1"><img src="assets/images/shape/shape-7.png" alt=""></span></div>
             <div class="shape shape-two scene"><span data-depth="2"><img src="assets/images/shape/shape-12.png" alt=""></span></div>
