Update Event - Yuvaneta'24.html

--- a/Event - Yuvaneta'24.html
+++ b/Event - Yuvaneta'24.html
@@ -298,7 +298,7 @@
                             </div>
                             <div class="col-lg-2">
                                 <div class="post-icon text-center">
-                                    <img src="assets/images/portfolio/CGT 5.0(1).png" alt="">
+                                    <img src="assets/images/portfolio/icon-1.png" alt="">
                                 </div>
                             </div>
                             <div class="col-lg-5">
