--- a/reg.html
+++ b/reg.html
@@ -173,7 +173,25 @@
                     <div class="col-lg-8">
                         <div class="section-title text-center mb-55 wow fadeInUp" id="register">
                             <h3>Membership drive</h3> 
-                            <h1>Coming soon.......</h1>
+                            <h1 class="bounce">Coming Soon...</h1>
+<style>
+  .bounce {
+    font-size: 64px;
+    color: #ff5733;
+    animation: bounce 1.5s ease-in-out infinite;
+  }
+
+  @keyframes bounce {
+    0% { transform: translateY(0); }
+    25% { transform: translateY(-20px); }
+    50% { transform: translateY(0); }
+    75% { transform: translateY(-10px); }
+    100% { transform: translateY(0); }
+  }
+</style>
+
+
+                            
                         </div>
                     </div>
                 </div>
