--- a/reg.html
+++ b/reg.html
@@ -177,7 +177,7 @@
 <style>
   .bounce {
     font-size: 64px;
-    color: #ff5733;
+    color: black;
     animation: bounce 1.5s ease-in-out infinite;
   }
 
