--- a/reg.html
+++ b/reg.html
@@ -172,6 +172,7 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-8">
                         <div class="section-title text-center mb-55 wow fadeInUp" id="register">
+                            <h2>Membership Drive</h2>
                               <title>Coming Soon</title>
   <style>
     h2 {
