--- a/Initiatives.html
+++ b/Initiatives.html
@@ -147,25 +147,24 @@
                         <div class="portfolio-filter-button mb-50 wow fadeInLeft">
                             <ul class="filter-btn mb-20">
                                 <li data-filter="*" class="active">Show All</li>
-                                <li data-filter=".cat-1">Entrepreneurship & Innovation</li>
-                                <li data-filter=".cat-2">Masoom</li>
-                                <li data-filter=".cat-3">Road Safety</li>
-                                <li data-filter=".cat-4">Rural Initiative</li>
+                                <li data-filter=".cat-1">Accessibility</li>
+                                <li data-filter=".cat-2">Arts & Culture</li>
+                                <li data-filter=".cat-3">Climate Change</li>
+                                <li data-filter=".cat-4">Entrepreneurship & Innovation</li>
                                 <li data-filter=".cat-5">Health</li>
-                                <li data-filter=".cat-6">Climate Change</li> 
-                                <li data-filter=".cat-7">Arts & Culture</li>
-                                <li data-filter=".cat-8">Accessibility</li>
-                                <li data-filter=".cat-9">Membership Engagement</li>
-                                <li data-filter=".cat-10">Projects</li>
+                                <li data-filter=".cat-6">Masoom</li> 
+                                <li data-filter=".cat-7">Membersship Engagement</li>
+                                <li data-filter=".cat-8">Projects</li>
+                                <li data-filter=".cat-9">Road Safety</li>
+                                <li data-filter=".cat-10">Rural Initiative</li>
                                 <li data-filter=".cat-11">Sports</li>
                                 <li data-filter=".cat-12">Others</li>
                             </ul>
                         </div>
                     </div>
                 </div>
-                
-                <div class="row portfolio-grid">
-                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-1">
+                 <div class="row portfolio-grid">
+                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-1 cat-6">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
                                 <img src="assets/images/portfolio/Eco arcade.png" alt="Img">
@@ -176,12 +175,12 @@
                                 </a>
                             </div>
                             <div class="text">
-                                <h3 class="title"><a href="Event - Eco Arcade.html">Eco Arcade</a></h3>
+                                <h3 class="title"><a href="Event - Yuvaneta'24.html">Eco Arcade</a></h3>
                                 <a class="cat-link">20/10/2024</a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-1">
+                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-1 cat-6">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
                                 <img src="assets/images/portfolio/yuvaneta'24 cover pic.png" alt="Img">
@@ -192,7 +191,7 @@
                                 </a>
                             </div>
                             <div class="text">
-                                <h3 class="title"><a href="Event - Yuvaneta'24.html">Yuvaneta'24</a></h3>
+                                <h3 class="title"><a href="Event - Eco Arcade.html">Yuvaneta'24</a></h3>
                                 <a class="cat-link">03/10/2024</a>
                             </div>
                         </div>
@@ -245,7 +244,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-7">
+                    <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-7 cat-11">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".50s">
                             <div class="img-holder">
                                 <img src="assets/images/portfolio/yuva olympics.png" alt="Img">
