--- a/reg.html
+++ b/reg.html
@@ -134,8 +134,8 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-8">
                         <div class="section-title text-center mb-55 wow fadeInUp" id="register">
-                            <h3>Membership Drive 2023-24</h3>
-                            <p class="position">Register Now <b>↓</b></p>
+                            <h1>Membership Drive 2023-24</h1>
+                            <p class="position">Coming Soon<b>...</b></p>
                         </div>
                     </div>
                 </div>
