--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                                 </a>
                             </div>
                             <div class="text">
-                                <h3 class="title"><a href="Event - CGT 5.0.html">CGT 5.0</a></h3>
+                                <h3 class="title"><a href="Event - CGT 5.0.html">Chennai Got Talent 5.0</a></h3>
                                 <a class="cat-link">18/08/2024</a>
                             </div>
                         </div>
@@ -395,7 +395,7 @@
                                 </a>
                             </div>
                             <div class="text">
-                                <h3 class="title"><a href="Event - CGT REC.html">CGT 5.0 REC</a></h3>
+                                <h3 class="title"><a href="Event - CGT REC.html">CGT @ REC</a></h3>
                                 <a class="cat-link">25/07/2024</a>
                             </div>
                         </div>
