--- a/Event - Yuvaneta'24.html
+++ b/Event - Yuvaneta'24.html
@@ -291,7 +291,7 @@
                                         <img src="assets/images/portfolio/Eco arcade.png" alt=""></a>
                                     </div>
                                     <div class="text">
-                                        <h4><a href="Event - Ecoarcade.html">Ecoarcade</a></h4>
+                                        <h4><a href="Event - Ecoarcade.html">Eco Arcade</a></h4>
                                         <p>October 2024</p>
                                     </div>
                                 </div>
@@ -308,7 +308,7 @@
                                         <img src="assets/images/portfolio/CGT 5.0(1).png" alt=""></a>
                                     </div>
                                     <div class="text">
-                                        <h4><a href="Event - CGT 5.0.html">CGT 5.0</a></h4>
+                                        <h4><a href="Event - CGT 5.0.html">Chennai Got Talent 5.0</a></h4>
                                         <p>August 2024</p>
                                     </div>
                                 </div>
