Update Event - Eco Arcade.html

--- a/Event - Eco Arcade.html
+++ b/Event - Eco Arcade.html
@@ -361,7 +361,7 @@
                             </div>
                             <div class="col-lg-2">
                                 <div class="post-icon text-center">
-                                    <img src="assets/images/portfolio/yuvaneta'24 cover pic.png" alt="">
+                                    <img src="assets/images/portfolio/icon-1.png" alt="">
                                 </div>
                             </div>
                             <div class="col-lg-5">
