Update Event - CGT 5.0.html

--- a/Event - CGT 5.0.html
+++ b/Event - CGT 5.0.html
@@ -121,7 +121,7 @@
                             <h1>Events & Projects</h1>
                             <ul class="breadcrumbs-link">
                                 <li><a href="index.html">Home</a></li>
-                                <li class="active">Chennai's Got Talent 5.0</li>
+                                <li class="active">Chennai Got Talent 5.0</li>
                             </ul>
                         </div>
                     </div>
@@ -145,7 +145,7 @@
                         <div class="col-lg-6">
                             <div class="text-wrapper mb-50 wow fadeInRight">
                                 <div class="text">
-                                    <h3 class="title">Chennai's Got Talent 5.0</h3>
+                                    <h3 class="title">Chennai Got Talent 5.0</h3>
                                     <p class="position">18 August 2024</p>
                                     <p align="justify">Chennai’s Got Talent (CGT) 5.0 is a stage where dreams take flight and creativity finds its voice. From music and dance to other creative expressions, it’s a space where dreams come alive and creativity shines. It’s more than just a talent show—it’s a celebration of passion, dedication, and the joy of sharing your gifts with the world. The event serves as a celebration of the diverse talent that thrives within Chennai, highlighting not only traditional and modern forms of artistic expression but also fostering innovation and inclusivity.
                                         The journey of CGT 5.0 began with live and online auditions that attracted remarkable talents from across Chennai. Over three months of rigorous planning led to auditions held at five different Yuva colleges, where a panel of esteemed judges witnessed incredible performances. The best of these contestants were selected to perform at a vibrant Pre-Finale event hosted at Phoenix Mall, which set the stage for the highly anticipated Grand Finale at the Anna Centenary Library Auditorium.
