--- a/Initiatives.html
+++ b/Initiatives.html
@@ -153,7 +153,7 @@
                                 <li data-filter=".cat-4">Entrepreneurship & Innovation</li>
                                 <li data-filter=".cat-5">Health</li>
                                 <li data-filter=".cat-6">Masoom</li> 
-                                <li data-filter=".cat-7">Membersship Engagement</li>
+                                <li data-filter=".cat-7">Membership Engagement</li>
                                 <li data-filter=".cat-8">Projects</li>
                                 <li data-filter=".cat-9">Road Safety</li>
                                 <li data-filter=".cat-10">Rural Initiative</li>
