--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                             <a class="cat-link">WE CAN! WE WILL!</a>
                         </div>
                     </div>
-                    <div class="col-xl-6 col-lg-6 mt-60 hero-img-two scene"><span data-depth=".5"><img src="assets/images/hero/img-9.jpg" class="wow fadeInLeft" alt="hero image"></span></div>
+                    <div class="col-xl-6 col-lg-6 mt-60 hero-img-two scene"><span data-depth=".5"><img src="assets/images/hero/img-10.png" class="wow fadeInLeft" alt="hero image"></span></div>
                 </div>
             </div>
         </section><!--====== End Hero Section ======-->
