--- a/Gallery.html
+++ b/Gallery.html
@@ -135,6 +135,14 @@
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
                             <div class="img-holder">
+                                <img src="assets/images/Events/Akshayapatra 4.0/Gallery-1.png" alt="">
+                                <a href="assets/images/Events/Akshayapatra 4.0/Gallery-1.png" class="portfolio-hover img-popup"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
+                            <div class="img-holder">
                                 <img src="assets/images/Events/CGT 5.0 OUT/gallery-cgt5.0.png" alt="">
                                 <a href="assets/images/Events/CGT 5.0 OUT/gallery-cgt5.0.png" class="portfolio-hover img-popup"></a>
                             </div>
