--- a/index.html
+++ b/index.html
@@ -323,6 +323,22 @@
                      <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-1 cat-6">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
+                                <img src="assets/images/portfolio/planting smiles cover pic.png" alt="Img">
+                                <a href="Event - Planting smiles.html" class="portfolio-hover">
+                                    <div class="hover-content">
+                                        <i class="far fa-external-link"></i>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text">
+                                <h3 class="title"><a href="Event - Planting smiles.html">Planting Smiles</a></h3>
+                                <a class="cat-link">11/11/2024</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-1 cat-6">
+                        <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
+                            <div class="img-holder">
                                 <img src="assets/images/portfolio/eco fest cover pic.png" alt="Img">
                                 <a href="Event-Eco Fest.html" class="portfolio-hover">
                                     <div class="hover-content">
