--- a/Event-Eco Fest.html
+++ b/Event-Eco Fest.html
@@ -337,8 +337,8 @@
                                         <img src="assets/images/portfolio/planting smiles cover pic.png" alt=""></a>
                                     </div>
                                     <div class="text">
-                                        <h4><a href="Event - Planting smiles.html">Teestories 1.0</a></h4>
-                                        <p>February 2020</p>
+                                        <h4><a href="Event - Planting smiles.html">Planting Smiles</a></h4>
+                                        <p>November 2024p>
                                     </div>
                                 </div>
                             </div>
