--- a/Event-Eco Fest.html
+++ b/Event-Eco Fest.html
@@ -338,7 +338,7 @@
                                     </div>
                                     <div class="text">
                                         <h4><a href="Event - Planting smiles.html">Planting Smiles</a></h4>
-                                        <p>November 2024p>
+                                        <p>November 2024 >
                                     </div>
                                 </div>
                             </div>
