Update Event - Akshaya Patra 4.0.html

--- a/Event - Akshaya Patra 4.0.html
+++ b/Event - Akshaya Patra 4.0.html
@@ -358,7 +358,7 @@
                                     </div>
                                     <div class="text">
                                         <h4><a href="Event - Planting smiles.html">Planting Smiles</a></h4>
-                                        <p>November 2024>
+                                        <p>November 2024></p>
                                     </div>
                                 </div>
                             </div>
