--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                                 </a>
                             </div>
                             <div class="text">
-                                <h3 class="title"><a href="Event - Yi Annual Day 2024.html">Yi Chennai Annual day 2024</a></h3>
+                                <h3 class="title"><a href="Event - Yi Chennai Annual Day 2024.html">Yi Chennai Annual day 2024</a></h3>
                                 <a class="cat-link">07/12/2024</a>
                             </div>
                         </div>
