--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".2s">
                             <div class="img-holder">
                                 <img src="assets/images/portfolio/Yi Annual day portfolio.png" alt="Img">
-                                <a href="Event - Yi Annual Day 2024.html" class="portfolio-hover">
+                                <a href="Event - Yi Chennai Annual Day 2024.html" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
                                     </div>
