Update YI Health report.html

--- a/YI Health report.html
+++ b/YI Health report.html
@@ -109,8 +109,8 @@
       <nav class="inside">
     <ul>
       <li><a href="#page/1">Front Cover</a></li>
-      <li><a href="#page/3">Chair's Message</a></li>
-      <li><a href="#page/6">National/Regional Leaders</a></li>
+      <li><a href="#page/3">YI National Leadership</a></li>
+      <li><a href="#page/6">Message From YUva National Team</a></li>
       <li><a href="#page/7">Steering Committee</a></li>
       <li><a href="#page/8">Chapter Leadership</a></li>
       <li><a href="#page/9">EC Team</a></li>
@@ -127,7 +127,7 @@
 </div>
   <div id="canvas">
     <div id="book-zoom">
-        <div><h3 align="center"class="title"><br>Yi Chennai Annual Report 2023</h3></div>
+        <div><h3 align="center"class="title"><br>YI Health Report</h3></div>
 		<div class="sample-docs">
 			<div class="hard"></div>
 			<div class="hard"></div>
