Update Achievements and recognitions.html

--- a/Achievements and recognitions.html
+++ b/Achievements and recognitions.html
@@ -189,6 +189,36 @@
                         <div class="col-lg-6">
                             <div class="text-wrapper mb-50 wow fadeInRight">
                                 <div class="text">
+                                    <h3 class="title">Yi Health Report 2024</h3>
+                                    <p class="position">2023</p>
+                                    <p align="justify">Our Yuva team had the honor of designing and drafting the Yi Chennai Annual Report for 2023. The report documented the achievements of the Yi Chennai Chapter through their projects and initiatives. It also highlighted the impactful accomplishments of the verticals within the Yi Chennai Chapter. This includes Yi Chennai Chapter's 34 Lakh digital reach, alongside affirming YUVA in 21+ Colleges and THALIR in 20+ Schools. On December 7th, 2023, our team had the privilege of attending the Yi Annual Day, where we presented the annual report in front of Mr. Dilip Krishna - National Chairman, Mr. Thiagarajan Thirunavukkarasu - Regional Chair (SRTN Region), and other CII delegates, Mr. Pratheep Chandramohan Chair-Yi Chennai Chapter, Mr. Srivas Anantharama- Co-Chair-Yi Chennai Chapter, Mr. Milan Wahi the upcoming vice chairman-CII Chennai zone, and the Vice Chairman Mr. Unni Krishnan the upcoming Chairman of CII Chennai zone. The Chair, Co-Chair, and designers of our club were presented with Yuva Inspiration Awards for designing the annual report. We are humbly proud of our achievements, which were only made possible through our teamwork and commitment. We look forward to continuing to contribute to the Yi community in any way we can.</p>                                    
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="team-details-section pt-50 pb-90 position-relative z-1">
+            <div class="shape shape-one scene"><span data-depth="1"><img src="assets/images/shape/shape-7.png" alt=""></span></div>
+            <div class="shape shape-two scene"><span data-depth="2"><img src="assets/images/shape/shape-8.png" alt=""></span></div>
+            <div class="container">
+                
+                <div class="team-details-wrapper">
+                    <div class="row align-items-center">
+                        <div class="col-lg-6 porfolio-item portfolio-style-one">
+                            <div class=" img-holder mb-50 position-relative z-1 wow fadeInLeft">
+                                <img src="assets/images/Achievements/AnnualReport23.jpg" alt="">
+                                <a href="AnnualReport23.html#page/1" class="portfolio-hover">
+                                    <div class="hover-content">
+                                        <i class="far fa-external-link"></i>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="text-wrapper mb-50 wow fadeInRight">
+                                <div class="text">
                                     <h3 class="title">Yi Chennai Annual Report 2023</h3>
                                     <p class="position">2023</p>
                                     <p align="justify">Our Yuva team had the honor of designing and drafting the Yi Chennai Annual Report for 2023. The report documented the achievements of the Yi Chennai Chapter through their projects and initiatives. It also highlighted the impactful accomplishments of the verticals within the Yi Chennai Chapter. This includes Yi Chennai Chapter's 34 Lakh digital reach, alongside affirming YUVA in 21+ Colleges and THALIR in 20+ Schools. On December 7th, 2023, our team had the privilege of attending the Yi Annual Day, where we presented the annual report in front of Mr. Dilip Krishna - National Chairman, Mr. Thiagarajan Thirunavukkarasu - Regional Chair (SRTN Region), and other CII delegates, Mr. Pratheep Chandramohan Chair-Yi Chennai Chapter, Mr. Srivas Anantharama- Co-Chair-Yi Chennai Chapter, Mr. Milan Wahi the upcoming vice chairman-CII Chennai zone, and the Vice Chairman Mr. Unni Krishnan the upcoming Chairman of CII Chennai zone. The Chair, Co-Chair, and designers of our club were presented with Yuva Inspiration Awards for designing the annual report. We are humbly proud of our achievements, which were only made possible through our teamwork and commitment. We look forward to continuing to contribute to the Yi community in any way we can.</p>                                    
